--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-loading": "^2.0.3",
+    "react-paginate": "^8.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
